5.0.2 -> 5.0.3:
    - proyvind: add sparcv9v2 (Niagara 2) architecture
    - proyvind: add arch macros for alpha and sparc

5.0.1 -> 5.0.2:
    - jbj: fix: python: re-add rpm.archscore() for smart depsolving usage.
    - jbj: backport %{shrink:...} and %{getenv:...} builtin macros.
    - jbj: updated sv.po (Translation Project).
    - jbj: fix: permit #%patchN comments by forcing single line expansion.
    - jbj: document newer macro builtins (%{@foo:...}, %{uuid:...}, and %{lua:...} todo).
    - jbj: fix: poldek in PLD needs replacement for headerGetRawEntry().
    - rse: ensure macro option parsing is done correctly also under GLIBC by not allowing option/argument permutations
    - jbj: pedantic identification of Foo (not foo) syscalls in --fsmdebug spew.
    - jbj: fix: --rollback PSM_INIT changes added fstates before initialize.
    - rse: allow to compile without <langinfo.h> and its nl_langinfo(3)

5.0.0 -> 5.0.1:
    - jbj: replace sr.po from translation project.
    - rse: fix Autoconf procedure by running python(1) based checks only under --with-python
    - jbj: fix: rpmtsCheck() needs to return 1 when problems exist.
    - jbj: use RPM_OS_NTOQNX as manifest constant.
    - jbj: updated nl.po (Translation Project).
    - jbj: resurrect rpm.spec.in.
    - jbj: automake for xar internal.
    - jbj: re-add PayloadFilesHavePrefix/CompressedFileNames w --lsb.
    - jbj: QNX needs defines for fts.c.
    - jbj: include <pthread.h> everywhere.
    - jbj: rpmsq.h doesn't need pthread condvar/mutex any more.
    - jbj: QNX does not have insque/remque.
    - jbj: QNX does not have d_off.
    - jbj: proof-of-concept rpmbuild --lsb implementation.
    - mej: catch EOF returned as RPMRC_NOTFOUND correctly.
    - jbj: fix: permit %{lua:...} to recurse.
    - jbj: unbreak rpm-python, preserve existing symbol in released versions.
    - jbj: fix several typos noticed by the translation project.